<resources>
    <string name="app_name">Gb.Android.Calculator</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_res">=</string>
    <string name="btn_div">/</string>
    <string name="btn_multiple">*</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="text_result">0</string>
    <string name="tools_first_digit">First Digit</string>
    <string name="first_digit">" "</string>
    <string name="del">del</string>
    <string name="tools_text_result">Result</string>
    <string name="clear">C</string>
    <string name="text_from_other_app">text from other app</string>
    <string name="setting">setting</string>
</resources>