<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="fill_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Result" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin16"
            android:columnCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/digit_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin8"
                android:text="@string/btn_1"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/digit_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin8"
                android:text="@string/btn_2"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/digit_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_3"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin16"
                android:layout_marginEnd="@dimen/margin8"
                android:text="@string/btn_div"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/digit_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_4"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/digit_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_5"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/digit_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_6"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/btn_multiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/btn_multiple"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/digit_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_7"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/digit_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_8"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/digit_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_9"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/btn_minus"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dot"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/digit_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_0"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_res"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/btn_plus"
                android:textSize="@dimen/btn_text_size" />
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>